Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82034

[REG 5.14.0 -> 5.14.1] Navigation in offline documentation is not working as expected

    XMLWordPrintable

Details

    • 3
    • 559332dc3efa507baaaba4ea8288bdb2318bc73d (qt/qttools/5.14)
    • DaVinci sprint 3

    Description

      Navigation within a documentation page is not working as expected. Like if a user clicks on some property, it should jump to details of that property, whereas it is jumping to start of the page.
      Try with opening help documentation for QML component 'Windows' and click on some property say, 'width'.

      Attachments

        1. QTCREATORBUG-23579.PNG
          322 kB
          Shveta Mittal
        For Gerrit Dashboard: QTBUG-82034
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            shmittal Shveta Mittal
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes