qdoc: Fix regression in linking to QML properties in offline docs

The <a name="..."> elements used for anchors are obsolete, but it
turns out the QTextBrowser backend for offline documentation still
relies on them. Re-introduce them into the output.

This commit partially reverts 5aa19d92.

Fixes: QTBUG-82034
Change-Id: Ia4af9c2ed809b12c5f79d27db4dd3eb5e9523d13
Reviewed-by: Paul Wicking <paul.wicking@qt.io>